#10: Lang Portal Backend: Implement database and routing (#11)
* #10: Added database init script

* #10: Added database, server is running again

* #10: Added some HTTP API responses, words now produce valid response

* #10: Implemented routing

* #10: Added some very basic tests

---------

Co-authored-by: Ondřej Pohl <ondra.pohl@gmail.com>