@@ -12,7 +12,10 @@ application {
     mainClass.set("io.ktor.server.netty.EngineMain")
 
     val isDevelopment: Boolean = project.ext.has("development")
-    applicationDefaultJvmArgs = listOf("-Dio.ktor.development=$isDevelopment")
+    applicationDefaultJvmArgs = listOf(
+        "-Dio.ktor.development=$isDevelopment",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    )
 }
 
 repositories {
@@ -26,8 +29,8 @@ kotlin {
 dependencies {
     implementation(libs.ktor.server.core)
     implementation(libs.ktor.server.swagger)
+    implementation(libs.ktor.server.cors)
     implementation(libs.ktor.server.content.negotiation)
-    implementation(libs.ktor.serialization.gson)
     implementation(libs.ktor.serialization.kotlinx.json)
     implementation(libs.koin.ktor)
     implementation(libs.koin.logger.slf4j)
@@ -35,11 +38,56 @@ dependencies {
     implementation(libs.logback.classic)
     implementation(libs.ktor.server.config.yaml)
     implementation(libs.kotlinx.datetime)
+    implementation(libs.exposed.core)
+    implementation(libs.exposed.dao)
+    implementation(libs.exposed.jdbc)
+    implementation(libs.exposed.java.time)
+    implementation(libs.sqlite.jdbc)
     testImplementation(libs.ktor.server.test.host)
     testImplementation(libs.kotlin.test.junit)
 }
 
+fun runDbQuery(dbFile: File, queryFile: File) {
+    val process = ProcessBuilder("sqlite3", dbFile.absolutePath)
+        .redirectInput(queryFile)
+        .redirectOutput(ProcessBuilder.Redirect.INHERIT)
+        .redirectError(ProcessBuilder.Redirect.INHERIT)
+        .start()
+
+    process.waitFor()
+
+    if (process.exitValue() == 0) {
+        println("Database query ${queryFile.absolutePath} succeeded!")
+    } else {
+        println("Database initialization failed. Check error output.")
+    }
+}
+
+tasks.register("initializeDb") {
+    doLast {
+        val dbFile = file("words.db")
+        val initSqlFile = file("migrations/0001_init.sql")
+        val dbTestEntries = file("migrations/0002_seed_data.sql")
+
+        if (dbFile.exists()) {
+            dbFile.delete()
+        }
+
+        runDbQuery(dbFile, initSqlFile)
+        runDbQuery(dbFile, dbTestEntries)
+    }
+}
+
 tasks.named<JavaExec>("run") {
     dependsOn("build")
-    jvmArgs = listOf("-Dio.ktor.development=true")
+    dependsOn("initializeDb")
+    jvmArgs = listOf(
+        "-Dio.ktor.development=true",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    )
+}
+
+tasks.named<Test>("test") {
+    dependsOn("initializeDb")
+    jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
 }
